--- a/examples/index.html
+++ b/examples/index.html
@@ -12,20 +12,16 @@
 		<article stack="add:child2">
 			<input type="text" value="child2">
 		</article>
-		<article stack="add:child3">
-			Child 3
-		</article>
+		<article stack="add:child3">Child 3</article>
 	</section>
 	<script src="../build/build.js"></script>
 	<script>
-	var Binding = require('binding'),
-			Stack = require('stack-plugin');
+	  var lego = require('lego'),
+	  		Stack = require('stack-brick'),
+	  		el = document.querySelector('.stack');
 
-	var el = document.querySelector('.stack');
-	var stack = new Stack(el);
-	var binding = new Binding();
-	binding.attr('stack', stack);
-	binding.apply(el);
+	  var stack = new Stack(el);
+	  lego(el).add('stack', stack).build();
 
 	var i = 1;
 	setInterval(function(){
